Clarify the title of the 'networkState' test

--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/015.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/015.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>networkState</title>
+<title>Changes to networkState when inserting and removing a &lt;source></title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
