--- a/html/semantics/embedded-content-0/media-elements/interfaces/VTTCue/align.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/VTTCue/align.html
@@ -21,7 +21,7 @@ test(function(){
     assert_equals(c1.align, 'start');
     c1.align = 'end';
     assert_equals(c1.align, 'end');
-    assert_throws('SYNTAX_ERR', function() {
+    assert_throws(new TypeError(), function() {
         c1.align = 'start\u0000';
     });
 }, document.title+', script-created cue');
