Correctly escape \u0000 in a test name

--- a/html/semantics/embedded-content-0/media-elements/interfaces/HTMLElement/HTMLTrackElement/src.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/HTMLElement/HTMLTrackElement/src.html
@@ -72,6 +72,6 @@ test(function(){
     link.setAttribute('href', '%00');
     assert_equals(track.src, link.href);
     assert_equals(track.getAttribute('src'), '\u0000');
-}, document.title + ' assigning \u0000 to IDL attribute');
+}, document.title + ' assigning \\u0000 to IDL attribute');
 
 </script>
