--- a/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/020.html
+++ b/html/semantics/embedded-content-0/media-elements/loading-the-media-resource/020.html
@@ -4,14 +4,19 @@
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
 <script>
-async_test(function(t) {
-  var v = document.createElement('video');
+var v;
+var t = async_test(function(t) {
+  v = document.createElement('video');
   v.setAttribute('src', ''); // invokes media load
   assert_equals(v.networkState, v.NETWORK_NO_SOURCE, 'networkState after setting src');
   var s = document.createElement('source');
-  s.onerror = this.step_func(function() { assert_unreached(); };
+  s.onerror = this.step_func(function() { assert_unreached(); });
   v.appendChild(s); // src is present so nothing happens here
+  onload = this.step_func(function() { t.done(); });
+});
+</script>
+<script>
+t.step(function() {
   v.removeAttribute('src'); // nothing should happen
-  onload = this.step_func(function() { t.done(); };
 });
 </script>
