--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-overflowing-child.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-overflowing-child.html
@@ -4,11 +4,15 @@
         <title>CSS Test: blended element overflows parent</title>
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+        <link rel="reviewer" title="Horia Olaru" href="mailto:olaru@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that an overflowing element with mix-blend-mode blends correctly.">
         <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-overflowing-child-ref.html">
         <style type="text/css">
+            body {
+                background: lightgray;
+            }
             .container {
                 position: absolute;
                 z-index: 1;
@@ -26,7 +30,8 @@
         </style>
     </head>
     <body>
-        <p>Test passes if you can see two green squares and a black square as their intersection.</p>
+        <p>Test passes if you can see two green squares and a black square as their intersection,<br>
+            drawn over a light gray background.</p>
         <div class="container">
             <div class="blender"></div>
         </div>
