--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSS Test: blending with an element containing text</title>
+        <title>CSS Test: check that the stacking context created by the parent element isolates blending.</title>
         <link rel="author" title="Mirela Budăeș" href="mailto:mbudaes@adobe.com">
         <link rel="author" title="Mihai Tica" href="mailto:mitica@adobe.com">
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
+        <link rel="reviewer" title="Horia Olaru" href="mailto:olaru@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="assert" content="Test checks that an element with mix-blend-mode blends with a parent having text.">
+        <meta name="assert" content="Test checks that an element with mix-blend-mode only blends with the contents
+        of a parent that creates a stacking context.">
         <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-parent-with-opacity-ref.html">
         <style type="text/css">
@@ -20,16 +22,20 @@
                 background: #FF0;
                 width: 100px;
                 height: 100px;
-                margin-top: -54px;
+                margin-top: -60px;
                 mix-blend-mode: difference;
             }
             .txt {
+                height: 60px;
                 color: #F00;
+            }
+            body {
+                background: lightgray;
             }
         </style>
     </head>
     <body>
-        <p>Test passes if a yellow square with green text is drawn.</p>
+        <p>Test passes if a yellow square with green text is drawn over a lightgray background.</p>
         <div class="parent">
             <div class="txt">Red text that becomes green after blending </div>
             <div class="blender"></div>
