--- a/notifications/notification-icon-001.html
+++ b/notifications/notification-icon-001.html
@@ -8,7 +8,7 @@
 <meta name="assert" content="The icon attribute set valid URL, then notificaiton icon content will show a pictrue.">
 <body>
   <p><strong>Make sure connect to network.</strong></p>
-  <p>Test passes if show a notificaiton with a cat pictrue.</p>
+  <p>Test passes if a notificaiton popups with a cat pictrue.</p>
   <script>
     var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: "Room 101",
