--- a/notifications/notification-icon-002.html
+++ b/notifications/notification-icon-002.html
@@ -7,7 +7,7 @@
 <meta name="flags" content="">
 <meta name="assert" content="The icon attribute set invalid URL, then notificaiton icon content will show nothing.">
 <body>
-  <p>Test passes if show a notificaiton and notification's icon content show nothing.</p>
+  <p>Test passes if a notificaiton popups and notification's icon content show nothing.</p>
   <script>
     var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: "Room 101",
