--- a/notifications/notification-body-002.html
+++ b/notifications/notification-body-002.html
@@ -7,7 +7,7 @@
 <meta name="flags" content="">
 <meta name="assert" content="The body attribute set empty string, then the notification's body content show nothing.">
 <body>
-  <p>Test passes if show a notification and the notification have no body content.</p>
+  <p>Test passes if a notification popups and the notification have no body content.</p>
   <script>
     var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: ""
