--- a/notifications/notification-close-001.html
+++ b/notifications/notification-close-001.html
@@ -8,7 +8,7 @@
 <meta name="assert" content="The notification.close() method will close this notification.">
 <script src="support/notifications.js"></script>
 <body>
-  <p>Test passes if show a notification and this notificaiton will disappear after a while(about 3 seconds).</p>
+  <p>Test passes if a notification popups and it disappears after a while(about 3 seconds).</p>
   <script>
     var closetime = 3000;
     getnotification();
