--- a/notifications/notification-dir-001.html
+++ b/notifications/notification-dir-001.html
@@ -7,7 +7,7 @@
 <meta name="flags" content="">
 <meta name="assert" content="The dir attribute set 'auto', then the notification's direction is the left edge.">
 <body>
-  <p>Test passes if show a notification and the notification's direction is the left edge.</p>
+  <p>Test passes if a notification popups and the notification's direction is the left edge.</p>
   <script>
     var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: "Room 101",
