--- a/notifications/notification-tag-001.html
+++ b/notifications/notification-tag-001.html
@@ -7,7 +7,7 @@
 <meta name="flags" content="">
 <meta name="assert" content="The tag attribute set same, then the notification's body only show the latest one.">
 <body>
-  <p>Test passes if only show one notification and the notification's body is "Room 202".</p>
+  <p>Test passes if only one notification popups and the notification's body is "Room 202".</p>
   <script>
     var notification1 = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: "Room 101",
