--- a/notifications/notification-tag-002.html
+++ b/notifications/notification-tag-002.html
@@ -7,7 +7,7 @@
 <meta name="flags" content="">
 <meta name="assert" content="The tag attribute set different, then the notification's body show different.">
 <body>
-  <p>Test passes if show two notifications and the notification's body are different.</p>
+  <p>Test passes if two notifications popups and the notification's body are different.</p>
   <script>
     var notification1 = typeof Notification != "undefined" ? new Notification("New Email Received", {
         body: "Room 101",
