Added missing testharnessreport.js

--- a/XMLHttpRequest/send-data-blob.htm
+++ b/XMLHttpRequest/send-data-blob.htm
@@ -7,6 +7,7 @@
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-response-attribute"  data-tested-assertations="following::a[contains(@href,'#blob-response-entity-body')]/.."/>
 
     <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <title>XMLHttpRequest: The send() method: Blob data</title>
 </head>
 
