--- a/XMLHttpRequest/send-data-arraybuffer.htm
+++ b/XMLHttpRequest/send-data-arraybuffer.htm
@@ -5,6 +5,7 @@
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-status-attribute"  data-tested-assertations="following::ol[1]/li[3]"/>
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-response-attribute"  data-tested-assertations="following::ol[1]/li[3]"/>
     <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <title>XMLHttpRequest: The send() method: ArrayBuffer data</title>
 </head>
 
