--- a/XMLHttpRequest/send-no-response-event-order.htm
+++ b/XMLHttpRequest/send-no-response-event-order.htm
@@ -10,6 +10,7 @@
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#switch-done" data-tested-assertations="following::ol[1]/li[3] following::ol[1]/li[4] following::ol[1]/li[6] following::ol[1]/li[7]" />
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-response-attribute" data-tested-assertations="following-sibling::ol/li[1]" />
     <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <title>XMLHttpRequest: The send() method: event order when there is no response entity body</title>
 </head>
 
