--- a/XMLHttpRequest/send-response-upload-event-loadstart.htm
+++ b/XMLHttpRequest/send-response-upload-event-loadstart.htm
@@ -6,6 +6,7 @@
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method" data-tested-assertations="following::ol[1]/li[8] following-sibling::ol/li[9]/ol/li[3]" />
 
     <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <title>XMLHttpRequest: The send() method: Fire a progress event named loadstart on the XMLHttpRequestUpload (synchronous flag is unset)</title>
 </head>
 
