--- a/XMLHttpRequest/send-timeout-events.htm
+++ b/XMLHttpRequest/send-timeout-events.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
     <title>XMLHttpRequest: The send() method: timeout is not 0 </title>
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-timeout-attribute" data-tested-assertations="following::ol[1]/li[2]" />
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#infrastructure-for-the-send()-method" data-tested-assertations="following::dt[5] following::a[contains(@href,'#timeout-error')]/.." />
