--- a/XMLHttpRequest/event-readystatechange-loaded.htm
+++ b/XMLHttpRequest/event-readystatechange-loaded.htm
@@ -32,7 +32,7 @@ test.step(function() {
         }
     });
 
-    client.open("GET", "resources/trickle.py?count=1000");
+    client.open("GET", "resources/trickle.py?count=5&delay=100");
     client.send(null);
 });
 </script>
