--- a/XMLHttpRequest/open-url-multi-window-4.htm
+++ b/XMLHttpRequest/open-url-multi-window-4.htm
@@ -18,6 +18,7 @@
       var test = async_test()
       function init() {
         test.step(function() {
+          var hasErrorEvent = false
           var client = new self[0].XMLHttpRequest()
           client.onreadystatechange = function() { 
             test.step(function() {
@@ -28,11 +29,14 @@
           }
           client.addEventListener('error', function(){
             test.step(function() {
+              hasErrorEvent = true
               assert_equals(client.readyState, 4, "readyState is 4 when error listener fires")
-              test.done()
             })
           })
-          client.open("GET", "folder.txt")
+          client.addEventListener('loadend', function(){
+            assert_true(hasErrorEvent, "should get an error event")
+            test.done()
+          })
           client.send(null)
           document.body.removeChild(document.getElementsByTagName("iframe")[0])
         })
