--- a/XMLHttpRequest/timeout-cors-async.htm
+++ b/XMLHttpRequest/timeout-cors-async.htm
@@ -15,22 +15,28 @@
     <script>
       var test = async_test(document.title)
       var client = new XMLHttpRequest()
+      var timeoutOrLoad = false
       client.open("GET", "http://www2." + location.hostname + (location.port ? ":" + location.port : "") +(location.pathname.replace(/[^\/]+$/, '')+'resources/corsenabled.py')+"?delay=2&code=200")
       client.timeout = 100
       client.addEventListener('timeout', function (e) {
         test.step(function() {
+          timeoutOrLoad = true
           assert_equals(e.type, 'timeout')
           assert_equals(client.status, 0)
-          test.done()
         })
       })
       client.addEventListener('load', function (e) {
         test.step(function() {
+          timeoutOrLoad = true
           assert_unreached('load event should not fire')
+        })
+      })
+      client.addEventListener('loadend', function (e) {
+        test.step(function() {
+          assert_true(timeoutOrLoad, "expecting either timeout or load event")
           test.done()
         })
       })
-
       client.send(null)
     </script>
   </body>
