--- a/orientation-event/t012-manual.html
+++ b/orientation-event/t012-manual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Implementations that are unable to provide all three angles must set the values of the unknown angles to null</title>
-    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no"> 
+    <meta name=viewport content="width=device-width, maximum-scale=1.0"> 
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
