--- a/orientation-event/t025-manual.html
+++ b/orientation-event/t025-manual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Implementations that are unable to provide acceleration data without the effect of gravity may instead supply the acceleration including the effect of gravity</title>
-    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
+    <meta name=viewport content="width=device-width, maximum-scale=1.0">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
