--- a/orientation-event/t028-manual.html
+++ b/orientation-event/t028-manual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The interval property must be expressed in milliseconds. It must be a constant, to simplify filtering of the data by the Web application</title>
-    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
+    <meta name=viewport content="width=device-width, maximum-scale=1.0">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
