--- a/orientation-event/t006-manual.html
+++ b/orientation-event/t006-manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rotate the device frame around its y axis</title>
-    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no"> 
+    <title>Rotate the device frame around its z axis</title>
+    <meta name=viewport content="width=device-width, maximum-scale=1.0">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
@@ -11,24 +11,24 @@
   <body>
     <div id="log"></div>
     <script>
-      var gamma = 90;
+      var alpha = 0;
       var run = false;
       window.addEventListener("deviceorientation", function(e) {
         if (!run) {
           run = true;
-          gamma = e.gamma;
+          alpha = e.alpha;
         }
       }, false);
-        
-      alert("Rotate the device frame around its y axis.");
+
+      alert("Rotate the device frame around its z axis.");
+      
+      test(function() {
+        assert_true(alpha > 0 && alpha < 360);
+      }, "Alpha is between 0 and 360");
 
       test(function() {
-        assert_true(gamma > -90 && gamma < 90);
-      }, "Gamma is between -90 and 90");
-
-      test(function() {
-        assert_false(gamma > -2 && gamma < 2);
-      }, "Gamma is not around zero (between -2 and 2)");
+        assert_false(alpha > -2 && alpha < 2);
+      }, "Alpha is not around zero (between 0 and 2)");
     </script>
   </body>
 </html>
