--- a/orientation-event/t021-manual.html
+++ b/orientation-event/t021-manual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>User agents implementing this specification must provide a new DOM event, named devicemotion</title>
-    <meta name=viewport content="width=device-width, maximum-scale=1.0, user-scalable=no">
+    <meta name=viewport content="width=device-width, maximum-scale=1.0">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="author" title="Mosquito FP7">
