Update tests for removing prefix in notification

--- a/notifications/notification-body-001.html
+++ b/notifications/notification-body-001.html
@@ -9,12 +9,9 @@
 <body>
   <p>Test passes if a notification popups and the notification's body content is "Room 101".</p>
   <script>
-    var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
-        body: "Room 101"
-      })
-      : window.webkitNotifications.createNotification("New Email Received", {
-        body: "Room 101"
-      });
+    var notification = new Notification("New Email Received", {
+      body: "Room 101"
+    });
     notification.show();
   </script>
 </body>
