--- a/notifications/notification-icon-001.html
+++ b/notifications/notification-icon-001.html
@@ -10,14 +10,10 @@
   <p><strong>Make sure connect to network.</strong></p>
   <p>Test passes if a notificaiton popups with a cat pictrue.</p>
   <script>
-    var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
-        body: "Room 101",
-        icon: "http://test.csswg.org/source/approved/support/cat.png"
-      })
-      : window.webkitNotifications.createNotification("New Email Received", {
-        body: "Room 101",
-        icon: "http://test.csswg.org/source/approved/support/cat.png"
-      });
+    var notification = new Notification("New Email Received", {
+      body: "Room 101",
+      icon: "http://test.csswg.org/source/approved/support/cat.png"
+    });
     notification.show();
   </script>
 </body>
