--- a/notifications/notification-dir-003.html
+++ b/notifications/notification-dir-003.html
@@ -9,14 +9,10 @@
 <body>
   <p>Test passes if a notification popups and the notification's direction is the left edge.</p>
   <script>
-    var notification = typeof Notification != "undefined" ? new Notification("New Email Received", {
-        body: "Room 101",
-        dir: "ltr"
-      })
-      : window.webkitNotifications.createNotification("New Email Received", {
-        body: "Room 101",
-        dir: "ltr"
-      });
+    var notification = new Notification("New Email Received", {
+      body: "Room 101",
+      dir: "ltr"
+    });
     notification.show();
   </script>
 </body>
