--- a/notifications/notification-tag-001.html
+++ b/notifications/notification-tag-001.html
@@ -9,24 +9,16 @@
 <body>
   <p>Test passes if only one notification popups and the notification's body is "Room 202".</p>
   <script>
-    var notification1 = typeof Notification != "undefined" ? new Notification("New Email Received", {
-        body: "Room 101",
-        tag: "Tom"
-      })
-      : window.webkitNotifications.createNotification("New Email Received", {
-        body: "Room 101",
-        tag: "Tom"
-      });
+    var notification1 = new Notification("New Email Received", {
+      body: "Room 101",
+      tag: "Tom"
+    });
     notification1.show();
 
-    var notification2 = typeof Notification != "undefined" ? new Notification("New Email Received", {
-        body: "Room 202",
-        tag: "Tom"
-      })
-      : window.webkitNotifications.createNotification("New Email Received", {
-        body: "Room 202",
-        tag: "Tom"
-      });
+    var notification2 = new Notification("New Email Received", {
+      body: "Room 202",
+      tag: "Tom"
+    });
     notification2.show();
   </script>
 </body>
