--- a/FileAPI/FileReader/Determining-Encoding.html
+++ b/FileAPI/FileReader/Determining-Encoding.html
@@ -11,13 +11,7 @@ var t = async_test("Blob Determing Encoding with encoding argument");
 t.step(function() {
     // string 'hello'
     var data = [0xFE,0xFF,0x00,0x68,0x00,0x65,0x00,0x6C,0x00,0x6C,0x00,0x6F];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray]);
+    var blob = new Blob([new Uint8Array(data)]);
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
@@ -30,13 +24,7 @@ t.step(function() {
 var t = async_test("Blob Determing Encoding with type attribute");
 t.step(function() {
     var data = [0xFE,0xFF,0x00,0x68,0x00,0x65,0x00,0x6C,0x00,0x6C,0x00,0x6F];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray], {type:"text/plain;charset=UTF-16BE"});
+    var blob = new Blob([new Uint8Array(data)], {type:"text/plain;charset=UTF-16BE"});
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
@@ -50,13 +38,7 @@ t.step(function() {
 var t = async_test("Blob Determing Encoding with UTF-8 BOM");
 t.step(function() {
     var data = [0xEF,0xBB,0xBF,0x68,0x65,0x6C,0x6C,0x6F];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray]);
+    var blob = new Blob([new Uint8Array(data)]);
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
@@ -69,13 +51,7 @@ t.step(function() {
 var t = async_test("Blob Determing Encoding without anything implying charset.");
 t.step(function() {
     var data = [0x68,0x65,0x6C,0x6C,0x6F];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray]);
+    var blob = new Blob([new Uint8Array(data)]);
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
@@ -88,13 +64,7 @@ t.step(function() {
 var t = async_test("Blob Determing Encoding with UTF-16BE BOM");
 t.step(function() {
     var data = [0xFE,0xFF,0x00,0x68,0x00,0x65,0x00,0x6C,0x00,0x6C,0x00,0x6F];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray]);
+    var blob = new Blob([new Uint8Array(data)]);
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
@@ -107,13 +77,7 @@ t.step(function() {
 var t = async_test("Blob Determing Encoding with UTF-16LE BOM");
 t.step(function() {
     var data = [0xFF,0xFE,0x68,0x00,0x65,0x00,0x6C,0x00,0x6C,0x00,0x6F,0x00];
-    var testStringArray = new ArrayBuffer(data.length);
-    var dataView = new DataView(testStringArray);
-    data.forEach(function(v,i){
-        dataView.setInt8(i, v);
-    });
-
-    var blob = new Blob([testStringArray]);
+    var blob = new Blob([new Uint8Array(data)]);
     var reader = new FileReader();
 
     reader.onloadend = t.step_func_done (function(event) {
