--- a/FileAPI/FileReader/Determining-Encoding.html
+++ b/FileAPI/FileReader/Determining-Encoding.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>FileAPI Test: Blob Determing Encoding</title>
+<title>FileAPI Test: Blob Determining Encoding</title>
 <link ref="author" title="march1993" href="mailto:march511@gmail.com">
 <link rel=help href="http://www.w3.org/TR/FileAPI/#enctypes">
 <script src="/resources/testharness.js"></script>
