updated syntax of clip-path-circle

--- a/contributors/adobe/submitted/masking/clip-path/clip-path-circle-001.html
+++ b/contributors/adobe/submitted/masking/clip-path/clip-path-circle-001.html
@@ -3,6 +3,8 @@
 <head>
     <title>CSS Masking: Test clip-path property and circle function with absolute values</title>
     <link rel="author" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
+    <link rel="author" title="Denise White" href="mailto:denisegwhite@outlook.com">
+    <link rel="author" title="Laury Kenton" href="mailto:webshiva@mac.com">
     <link rel="help" href="http://www.w3.org/TR/css-masking/#clipping-paths">
     <link rel="help" href="http://www.w3.org/TR/css-masking/#clip-path-property">
     <link rel="match" href="reference/clip-path-circle-ref.html">
@@ -12,6 +14,6 @@
 </head>
 <body>
     <p>The test passes if there is a green circle.</p>
-    <div style="width: 200px; height: 200px; background-color: green; clip-path: circle(100px, 100px, 100px);"></div>
+    <div style="width: 200px; height: 200px; background-color: green; clip-path: circle();"></div>
 </body>
 </html>
