--- a/contributors/ttwf_seattle/justh/outline-002.html
+++ b/contributors/ttwf_seattle/justh/outline-002.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>outline: outline on div with specified width (percent)</title>
+<title>outline: outline on div with specified width (px)</title>
 <link rel="author" title="Justin Hill" href="http://www.justin-hill.com">
 <link rel="help" href="http://www.w3.org/TR/css3-ui/#outline">
 <link rel="match" href="ref/outline-001-ref.html">
