--- a/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-case-sensitive-001.html
+++ b/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-case-sensitive-001.html
@@ -9,7 +9,7 @@
     <style type="text/css">
         :root {
             /* these should be VALID custom property names */
-            var-verygreen:   #3e3;
+            var-verygreen:   #5d5;
             var-AlsoGreen:   #5d5;
 
             /* these should be INVALID custom property names */
@@ -25,13 +25,11 @@
 </head>
 <body>
     <h2>Valid CSS Variable Names</h2>
-    <h3>These should be styled green.</h3>
-    <p class="green-good-1">This paragraph is styled using a valid CSS Variable name.</p>
-    <p class="green-good-2">This paragraph is styled using a valid CSS Variable name.</p>
-
+    <p class="green-good-1">This paragraph is styled using a valid CSS Variable name. Pass if green.</p>
+    <p class="green-good-2">This paragraph is styled using a valid CSS Variable name. Pass if green.</p>
+    <br>
     <h2>Invalid CSS Variable Names</h2>
-    <h3>These should be unstyled. If any of these paragraphs are red, an invalid property name was applied.</h3>
-    <p class="red-bad-1">This paragraph is styled using a valid CSS Variable name.</p>
-    <p class="red-bad-2">This paragraph is styled using a valid CSS Variable name.</p>
+    <p class="red-bad-1">This paragraph is styled using an invalid CSS Variable name. Fail if red.</p>
+    <p class="red-bad-2">This paragraph is styled using an invalid CSS Variable name. Fail if red.</p>
 </body>
 </html>
