--- a/contributors/ttwf_seattle/justh/ref/box-sizing-border-box-001-ref.html
+++ b/contributors/ttwf_seattle/justh/ref/box-sizing-border-box-001-ref.html
@@ -10,8 +10,7 @@
     top:25%;
   }
   .child {
-    position:relative;
-    z-index: 1;
+    color: white;
     box-shadow: 0 0 0 10px black inset;
     width:50%;
     background:green;
@@ -21,7 +20,7 @@
   }
 </style>
 <body>
-  <p> Test passes if child divs are side by side with no red visable.</p>
+  <p> Test passes if green boxes are side by side with no red visible.</p>
   <div class="container">
     <div class="child">
       <p>left</p>
